minor title change

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>is DDB open source yet?</title>
+    <title>Is DDB open source?</title>
     <meta name="description" content="Has deviantART made DDB open source yet?">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="author" href="humans.txt" />
